# starter-rust-webuireact-rsbuild

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_CRITIQUE.md  BUILD_RESOLUTION.md  Cargo.toml  DEBUG_PANEL_UPDATE.md  ERRORS_AS_VALUES_GUIDE.md  FILE_SPLITTING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PLUGIN_GUIDE.md  README.md  RESTRUCTURING.md  TESTING.md  app.config.toml  build-dist.sh  build-frontend-inline.js  build-frontend.js  index.html  post-build.sh  run.sh  webui_bridge_template.js
docs/: 01-getting-started.md  02-architecture.md  03-development.md  04-api-reference.md  05-deployment.md
frontend/: .biomeignore  BIOME_CONFIG.md  biome.json  build-logger.js  index.html  package.json  rsbuild.config.dev.ts  rsbuild.config.inline.ts  rsbuild.config.ts  rspack.config.dev.ts  rspack.config.inline.ts
frontend/src/: communication-bridge.ts  event-bus.ts  main.tsx
frontend/src/core/: index.ts
frontend/src/models/: index.ts
frontend/src/services/: index.ts
frontend/src/use-cases/: App.tsx
frontend/src/view-models/: communication-bridge.ts
src/: core.rs  handlers.rs  main.rs  mod.rs  websocket_handler.rs
src/core/: mod.rs
src/error_handling/: app_error.rs  error_context.rs  error_handler.rs  mod.rs  result_ext.rs
src/event_bus/: mod.rs
src/infrastructure/: mod.rs
src/model/: core.rs
src/plugins/: mod.rs
src/presentation/: devtools.rs  mod.rs
src/tests/: mod.rs  test_domain_entities.rs  test_domain_errors.rs
src/viewmodel/: handlers.rs  mod.rs  websocket_handler.rs  window_logger.rs
static/js/: index.6ca6351c.js  lib-react.ab574441.js
(+29 files in other folders)
