[package]
name = "rustwebui-app"
version = "1.0.0"
edition = "2024"

[dependencies]
webui-rs = { git = "https://github.com/webui-dev/rust-webui", branch = "main" }
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
lazy_static = "1.4"
tracing-appender = "0.2"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
tokio-tungstenite = "0.26"
tungstenite = "0.26"
futures-util = "0.3"
once_cell = "1.20"

# Serialization formats (optional features)
rmp-serde = { version = "1.3", optional = true }  # MessagePack
serde_cbor = { version = "0.11", optional = true }  # CBOR
prost = { version = "0.13", optional = true }  # Protobuf

# Core utilities
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tiny_http = "0.12"
mime_guess = "2.0"
async-trait = "0.1"
thiserror = "2.0"

[features]
default = ["json", "msgpack", "cbor"]
json = []
msgpack = ["rmp-serde"]
cbor = ["serde_cbor"]
protobuf = ["prost"]
all-formats = ["json", "msgpack", "cbor", "protobuf"]

[build-dependencies]
cc = "1.0"
toml = "0.8"
walkdir = "2.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wix]
category = "Application"
description = "Rust WebUI Application"

[profile.dev]
debug = false
